# kitchen-cpq-platform

./: .eslintrc.js  .eslintrc.json  .gitignore  .nxignore  IMPLEMENTATION.md  README.md  demo.js  nx.json  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.cursor/rules/: 3d-configurator-architecture.mdc  ai-agent-architecture.mdc  backend-architecture.mdc  code-style.mdc  database-workflow.mdc  deployment-restrictions.mdc  events-kafka-contracts.mdc  frontend-architecture.mdc  observability-otel.mdc  performance-budgets.mdc  project-overview.mdc  python-optimization-workflow.mdc  rust-geometry-kernel-workflow.mdc  security-auth-tenancy.mdc  trpc.mdc  (+3 more)
1-5/: checklist.md  clone-list.md  data-contracts-tRPC-gRPC-latency.md  folder-tree.md  implementation.md  plan.md
examples/: complete-workflow.ts
services/ai-orchestration-service/: package.json  project.json  pyproject.toml  tsconfig.app.json
services/ai-orchestration-service/app/: __init__.py  agents.py  audit.py  config.py  guardrails.py  main.py  models.py  tools.py
services/ai-orchestration-service/app/routers/: __init__.py  design.py  manufacturing.py
services/ai-orchestration-service/src/: main.ts  module.ts
services/ai-orchestration-service/src/ai_orchestration_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai-orchestration-service/tests/: test_design_endpoints.py
services/optimization-engine-service/: project.json  pyproject.toml
services/optimization-engine-service/app/: __init__.py  main.py  test_layouts.py
src/: index.ts  types.ts
(+894 files in other folders)
