[project]
name = "ai-orchestration-service"
version = "0.1.0"
description = "FastAPI + LangGraph agentic orchestration layer for semantic-to-deterministic tooling."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "langgraph>=0.2.33,<0.3.0",
  "langchain-core>=0.3.0,<0.4.0",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "anyio>=4.4.0,<5.0.0",
  "respx>=0.21.0,<0.22.0",
  "coverage>=7.6.0,<8.0.0",
  "black>=24.0.0,<25.0.0",
  "flake8>=7.0.0,<8.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
