[project]
name = "optimization-engine-service"
version = "0.0.1"
description = "FastAPI + OR-Tools layout optimization service (skeleton)."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "pydantic>=2.10.0,<3.0.0",
  "ortools>=9.11.0,<10.0.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

